#135: Add code review changes & fix code smells